chore: manage package.json for app

--- a/app/package.json
+++ b/app/package.json
@@ -7,12 +7,10 @@
   "scripts": {
     "dev:vite": "vite",
     "dev:tsc": "tsc --watch",
-    "dev:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
     "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "ci": "CI=true firebase emulators:exec --ui 'npx vite'",
     "dev:emulators": "firebase emulators:start --import ./misc/local",
     "build:bundle": "NODE_ENV=production vite build",
-    "build:css": "tailwindcss -i public/static/css/root.css -o dist/static/css/root.css",
     "build": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
     "deploy:production": "firebase deploy",
@@ -25,9 +23,6 @@
     "dev:storybook": "storybook dev --disable-telemetry -p 6006",
     "build:storybook": "storybook build --disable-telemetry"
   },
-  "volta": {
-    "node": "22.6.0"
-  },
   "author": "derui",
   "license": "MIT",
   "devDependencies": {
@@ -35,40 +30,38 @@
     "@playwright/test": "^1.41.1",
     "@remix-run/web-fetch": "^4.4.2",
     "@spp/eslint-config": "workspace:^",
-    "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
-    "@testing-library/dom": "^9.3.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/crypto-js": "^4.2.2",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.10",
-    "@types/sinon": "catalog:",
-    "@types/uuid": "^9.0.8",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/react": "catalog:",
+    "@testing-library/user-event": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "@types/react-router": "catalog:",
+    "@types/react-router-dom": "catalog:",
+    "@types/react-transition-group": "^4.4.10",
+    "@types/sinon": "catalog:",
+    "@types/uuid": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
-    "cpx": "^1.5.0",
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-react": "catalog:",
     "eslint-plugin-unused-imports": "catalog:",
-    "firebase-tools": "^13.1.0",
     "jsdom": "catalog:",
-    "prettier": "^3.2.4",
-    "tailwindcss": "catalog:",
     "sinon": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    "@spp/feature-game": "workspace:^",
+    "@spp/feature-login": "workspace:^",
+    "@spp/feature-voting": "workspace:^",
+    "@spp/infra-authenticator": "workspace:^",
+    "@spp/infra-domain": "workspace:^",
     "@spp/ui-icon": "workspace:^",
     "@spp/ui-loader": "workspace:^",
     "@spp/ui-overlay": "workspace:^",
@@ -76,19 +69,13 @@
     "@spp/ui-radio-group": "workspace:^",
     "@spp/ui-skeleton": "workspace:^",
     "@spp/ui-toggle-button": "workspace:^",
-    "clsx": "catalog:",
-    "crypto-js": "^4.2.0",
-    "firebase": "^10.7.2",
-    "immer": "^10.0.3",
+    "crypto-js": "catalog:",
+    "firebase": "catalog:",
+    "immer": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "react-redux": "^8.1.2",
-    "react-router": "^6.21.3",
-    "react-router-dom": "^6.21.3",
-    "react-transition-group": "^4.4.5",
-    "redux": "^4.2.1",
-    "redux-observable": "^2.0.0",
-    "rxjs": "^7.8.1",
-    "uuid": "^9.0.1"
+    "react-router": "catalog:",
+    "react-router-dom": "catalog:",
+    "uuid": "catalog:"
   }
 }
