--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,46 +5,76 @@ packages:
   - 'tests/**/*'
 
 catalog:
-  clsx: 2.1.1
+  # build:vite
   vite: 5.4.8
   vitest: 2.1.1
   "@vitejs/plugin-react": 4.3.1
+
+  # test:testing-librry
   jsdom: 25.0.1
   "@testing-library/react": 16.0.1
   "@testing-library/user-event": 14.5.2
+  # test:sinon
+  "sinon": 19.0.2
+  "@types/sinon": 17.0.3
+  
+  # lib:react
   react: 18.3.1
   react-dom: 18.3.1
-  react-router-dom: 6.26.2
+  "@types/react": 18.3.10
+  "@types/react-dom": 18.2.18
+
+  # dev:storybook
   "@storybook/addon-controls": 8.3.3
   "@storybook/cli": 8.3.3
   "@storybook/react": 8.3.3
   "@storybook/react-vite": 8.3.3
-  tailwindcss: 3.4.13
+
+  # dev:eslint and related
   "eslint": 9.13.0
   "eslint-config-prettier": 9.1.0
   "eslint-plugin-react": 7.37.0
   "eslint-plugin-unused-imports": 4.1.4
   "typescript-eslint": 8.7.0
-  "concurrently": 9.0.1
+
+  # lib:jotai
   "jotai": 2.9.3
-  "@types/react": 18.3.10
-  "@types/react-dom": 18.2.18
+
+  # lib:react-router
+  react-router: 6.26.2
+  react-router-dom: 6.26.2
   "@types/react-router": 5.1.20
   "@types/react-router-dom": 5.3.3
+
   "@types/react-transition-group": 4.4.10
-  "sinon": 19.0.2
-  "@types/sinon": 17.0.3
+
+  # type:node
   '@types/node': 22.5.5
+
+  # dev:typescript
   typescript: 5.6.2
+
+  # lib:firebase
   firebase-tools: 13.20.1
   firebase: 10.13.2
   "@firebase/rules-unit-testing": 3.0.1
+
+  # dev:tools
   '@dotenvx/dotenvx': 1.14.1
+  "@pnpm/find-workspace-dir": 7.0.1
+  "concurrently": 9.0.1
+
+  # lib:crypto-js
   'crypto-js': 4.2.0
   '@types/crypto-js': 4.2.2
+
+  # lib:immer
   immer: 10.0.3
+
+  # lib:uuid
   uuid: 10.0.0
   "@types/uuid": 10.0.0
-  "@pnpm/find-workspace-dir": 7.0.1
+
+  # dev:vanilla-extract
   '@vanilla-extract/css': 1.16.0
   '@vanilla-extract/vite-plugin': 4.0.16
