fix: update packages

--- a/app/package.json
+++ b/app/package.json
@@ -26,23 +26,22 @@
   "author": "derui",
   "license": "MIT",
   "devDependencies": {
-    "@firebase/rules-unit-testing": "^3.0.1",
-    "@playwright/test": "^1.41.1",
-    "@remix-run/web-fetch": "^4.4.2",
+      "@firebase/rules-unit-testing": "catalog:",
+      "@playwright/test": "catalog:",
+      "@remix-run/web-fetch": "catalog:",
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
-    "@testing-library/dom": "^9.3.4",
+      "@testing-library/dom": "catalog:",
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@types/react-router": "catalog:",
     "@types/react-router-dom": "catalog:",
-    "@types/react-transition-group": "^4.4.10",
     "@types/sinon": "catalog:",
     "@types/uuid": "catalog:",
     "@vitejs/plugin-react": "catalog:",
