--- a/packages/infra/domain/package.json
+++ b/packages/infra/domain/package.json
@@ -9,8 +9,8 @@
   "exports": {
     ".": {
       "import": {
-        "types": "src/index.ts",
-        "default": "dist/index.js"
+        "types": "./src/index.ts",
+        "default": "./dist/index.js"
       }
     }
   },
