--- a/app/package.json
+++ b/app/package.json
@@ -26,16 +26,16 @@
   "author": "derui",
   "license": "MIT",
   "devDependencies": {
-      "@firebase/rules-unit-testing": "catalog:",
-      "@playwright/test": "catalog:",
-      "@remix-run/web-fetch": "catalog:",
+    "@firebase/rules-unit-testing": "catalog:",
+    "@playwright/test": "catalog:",
+    "@remix-run/web-fetch": "catalog:",
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
-      "@testing-library/dom": "catalog:",
+    "@testing-library/dom": "catalog:",
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "catalog:",
     "@types/react": "catalog:",
@@ -66,6 +66,7 @@
     "crypto-js": "catalog:",
     "firebase": "catalog:",
     "immer": "catalog:",
+    "jotai": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-router": "catalog:",
