chore: remove unused package and scripts

--- a/app/package.json
+++ b/app/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev:vite": "vite",
+    "dev:test": "vitest",
     "dev:tsc": "tsc --watch",
     "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "ci": "CI=true firebase emulators:exec --ui 'npx vite'",
-    "dev:emulators": "firebase emulators:start --import ./misc/local",
     "build:bundle": "NODE_ENV=production vite build",
     "build": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
@@ -17,17 +16,14 @@
     "publish:preview": "pnpm run build && pnpm run deploy:preview",
     "publish:production": "pnpm run build && pnpm run deploy:production",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-    "test": "firebase emulators:exec 'npx vitest run'",
-    "watch:test": "firebase emulators:exec 'npx vitest watch'",
-    "watch:test:noemu": "npx vitest watch",
+    "test": "vitest run",
     "dev:storybook": "storybook dev --disable-telemetry -p 6006",
     "build:storybook": "storybook build --disable-telemetry"
   },
   "author": "derui",
   "license": "MIT",
   "devDependencies": {
-    "@firebase/rules-unit-testing": "catalog:",
-    "@playwright/test": "catalog:",
+      "@playwright/test": "catalog:",
     "@remix-run/web-fetch": "catalog:",
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
