--- a/app/package.json
+++ b/app/package.json
@@ -10,15 +10,13 @@
     "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "ci": "CI=true firebase emulators:exec --ui 'npx vite'",
     "build:bundle": "NODE_ENV=production vite build",
-    "build": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
+    "build": "concurrently --raw --kill-others --handle-input \"pnpm:build:*\"",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
     "deploy:production": "firebase deploy",
     "publish:preview": "pnpm run build && pnpm run deploy:preview",
     "publish:production": "pnpm run build && pnpm run deploy:production",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-    "test": "vitest run",
-    "dev:storybook": "storybook dev --disable-telemetry -p 6006",
-    "build:storybook": "storybook build --disable-telemetry"
+    "test": "vitest run"
   },
   "author": "derui",
   "license": "MIT",
@@ -27,10 +25,6 @@
     "@remix-run/web-fetch": "catalog:",
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
-    "@storybook/addon-controls": "catalog:",
-    "@storybook/cli": "catalog:",
-    "@storybook/react": "catalog:",
-    "@storybook/react-vite": "catalog:",
     "@testing-library/dom": "catalog:",
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "catalog:",
