fix: some miss configurations for

--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "ci": "CI=true firebase emulators:exec --ui 'npx vite'",
     "build:bundle": "NODE_ENV=production vite build",
-    "build": "concurrently --raw --kill-others --handle-input \"pnpm:build:*\"",
+    "build": "concurrently \"pnpm:build:*\"",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
     "deploy:production": "firebase deploy",
     "publish:preview": "pnpm run build && pnpm run deploy:preview",
@@ -35,6 +35,7 @@
     "@types/react-router-dom": "catalog:",
     "@types/sinon": "catalog:",
     "@types/uuid": "catalog:",
+    "@vanilla-extract/vite-plugin": "^4.0.17",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
@@ -56,6 +57,7 @@
     "@spp/infra-domain": "workspace:^",
     "@spp/shared-domain": "workspace:^",
     "@spp/shared-use-case": "workspace:^",
+    "@vanilla-extract/css": "^1.16.0",
     "crypto-js": "catalog:",
     "firebase": "catalog:",
     "immer": "catalog:",
