--- a/app/package.json
+++ b/app/package.json
@@ -57,6 +57,7 @@
     "@spp/infra-domain": "workspace:^",
     "@spp/shared-domain": "workspace:^",
     "@spp/shared-use-case": "workspace:^",
+    "@spp/ui-theme": "workspace:^",
     "@vanilla-extract/css": "^1.16.0",
     "crypto-js": "catalog:",
     "firebase": "catalog:",
