fix: navigate to revealed page

--- a/configs/eslint-config/package.json
+++ b/configs/eslint-config/package.json
@@ -13,6 +13,7 @@
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-react": "catalog:",
+    "eslint-plugin-react-hooks": "catalog:",
     "eslint-plugin-unused-imports": "catalog:",
     "typescript-eslint": "catalog:"
   }
