--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -42,6 +42,7 @@ catalog:
   "eslint": 9.13.0
   "eslint-config-prettier": 9.1.0
   "eslint-plugin-react": 7.37.0
+  "eslint-plugin-react-hooks": 5.0.0
   "eslint-plugin-unused-imports": 4.1.4
   "typescript-eslint": 8.7.0
 
