feat: add user name editor presentation

--- a/features/game/package.json
+++ b/features/game/package.json
@@ -62,6 +62,7 @@
     "@spp/ui-button-style": "workspace:^",
     "@spp/ui-dialog": "workspace:^",
     "@spp/ui-icon": "workspace:^",
+    "@spp/ui-input": "workspace:^",
     "@spp/ui-loader": "workspace:^",
     "@spp/ui-theme": "workspace:^",
     "@vanilla-extract/css": "catalog:",
