--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -32,6 +32,12 @@ catalog:
   "@types/react": 18.3.10
   "@types/react-dom": 18.2.18
 
+  # lib:react-hook-form
+  react-hook-form: 7.53.1
+
+  # lib:zod
+  zod: 3.23.8
+
   # dev:storybook
   "@storybook/addon-controls": 8.3.3
   "@storybook/cli": 8.3.3
