--- a/packages/shared-logic/domain/package.json
+++ b/packages/shared-logic/domain/package.json
@@ -29,6 +29,24 @@
         "types": "./src/mock/user-repository.ts",
         "default": "./dist/mock/user-repository.js"
       }
+    },
+      "./voting-repository": {
+      "import": {
+        "types": "./src/voting-repository.ts",
+        "default": "./dist/voting-repository.js"
+      }
+    },
+    "./game-repository": {
+      "import": {
+        "types": "./src/game-repository.ts",
+        "default": "./dist/game-repository.js"
+      }
+    },
+    "./user-repository": {
+      "import": {
+        "types": "./src/user-repository.ts",
+        "default": "./dist/user-repository.js"
+      }
     }
   },
   "type": "module",
