refactor: apply new interface

--- a/features/game/package.json
+++ b/features/game/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
+    "@spp/infra-authenticator": "workspace:^",
     "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
