--- a/packages/ui/dialog/package.json
+++ b/packages/ui/dialog/package.json
@@ -36,7 +36,7 @@
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
-      "@testing-library/user-event": "catalog:",
+    "@testing-library/user-event": "catalog:",
     "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
@@ -54,6 +54,7 @@
     "@spp/ui-theme": "workspace:^",
     "@types/react": "catalog:",
     "@vanilla-extract/css": "catalog:",
-    "react": "catalog:"
+    "react": "catalog:",
+    "storybook": "catalog:"
   }
 }
