--- a/packages/ui/toggle-button/package.json
+++ b/packages/ui/toggle-button/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@spp/ui-theme": "workspace:^",
     "@vanilla-extract/css": "catalog:",
-      "react": "catalog:"
+    "react": "catalog:",
+    "storybook": "catalog:"
   }
 }
