--- a/packages/ui/input/package.json
+++ b/packages/ui/input/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@spp/ui-theme": "workspace:^",
     "@vanilla-extract/css": "^1.16.0",
-    "react": "catalog:"
+    "react": "catalog:",
+    "storybook": "catalog:"
   }
 }
