--- a/packages/ui/loader/package.json
+++ b/packages/ui/loader/package.json
@@ -49,6 +49,7 @@
     "@spp/shared-color-variant": "workspace:^",
     "@spp/ui-theme": "workspace:^",
     "@vanilla-extract/css": "catalog:",
-    "react": "catalog:"
+    "react": "catalog:",
+    "storybook": "catalog:"
   }
 }
