--- a/packages/ui/overlay/package.json
+++ b/packages/ui/overlay/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@spp/ui-theme": "workspace:^",
     "@vanilla-extract/css": "catalog:",
-    "react": "catalog:"
+    "react": "catalog:",
+    "storybook": "catalog:"
   }
 }
