--- a/packages/ui/radio-button/package.json
+++ b/packages/ui/radio-button/package.json
@@ -18,7 +18,7 @@
     "check-type": "tsc --noEmit",
     "build:tsc": "tsc",
     "dev:build:tsc": "tsc --watch --noEmit",
-      "test": "vitest run",
+    "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
     "dev:storybook": "storybook dev --disable-telemetry -p 6006",
@@ -31,7 +31,7 @@
   "license": "ISC",
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
-      "@spp/typescript-config": "workspace:^",
+    "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
@@ -51,6 +51,7 @@
   "dependencies": {
     "@spp/ui-theme": "workspace:^",
     "@vanilla-extract/css": "catalog:",
-    "react": "catalog:"
+    "react": "catalog:",
+    "storybook": "catalog:"
   }
 }
