--- a/features/game/package.json
+++ b/features/game/package.json
@@ -72,6 +72,7 @@
     "react-hook-form": "catalog:",
     "react-router-dom": "catalog:",
     "storybook": "catalog:",
+    "wouter": "catalog:",
     "zod": "catalog:"
   }
 }
