fix: do not use index in game feature

--- a/features/game/package.json
+++ b/features/game/package.json
@@ -6,10 +6,10 @@
     "./dist/"
   ],
   "exports": {
-    ".": {
+    "./page/game-index": {
       "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
+        "types": "./src/page/game-index.ts",
+        "default": "./dist/page/game-index.js"
       }
     }
   },
