--- a/features/voting/package.json
+++ b/features/voting/package.json
@@ -67,7 +67,7 @@
     "@vanilla-extract/css": "catalog:",
     "jotai": "catalog:",
     "react": "catalog:",
-    "react-router-dom": "^6.27.0",
+      "wouter": "catalog:",
     "storybook": "catalog:"
   }
 }
