--- a/features/game/package.json
+++ b/features/game/package.json
@@ -6,10 +6,10 @@
     "./dist/"
   ],
   "exports": {
-    "./page/game-index": {
+    ".": {
       "import": {
-        "types": "./src/page/game-index.ts",
-        "default": "./dist/page/game-index.js"
+        "types": "./src/index.ts",
+          "default": "./dist/index.js"
       }
     }
   },
