--- a/features/game/package.json
+++ b/features/game/package.json
@@ -22,7 +22,7 @@
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
     "dev:storybook": "storybook dev --disable-telemetry -p 6006",
-    "build:storybook": "storybook build --disable-telemetry",
+    "build:storybook": "storybook build --disable-telemetry -o ../../storybook/books/feature/game",
     "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "build": "concurrently \"pnpm:build:*\""
   },
