--- a/app/package.json
+++ b/app/package.json
@@ -33,9 +33,9 @@
     "@types/react-dom": "catalog:",
     "@types/sinon": "catalog:",
     "@types/uuid": "catalog:",
-    "@vanilla-extract/vite-plugin": "^4.0.17",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
+      "@vanilla-extract/css": "catalog:",
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-react": "catalog:",
@@ -44,6 +44,7 @@
     "sinon": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
+      "@vanilla-extract/vite-plugin": "catalog:",
     "vitest": "catalog:"
   },
   "dependencies": {
@@ -55,14 +56,12 @@
     "@spp/shared-domain": "workspace:^",
     "@spp/shared-use-case": "workspace:^",
     "@spp/ui-theme": "workspace:^",
-    "@vanilla-extract/css": "^1.16.0",
     "crypto-js": "catalog:",
     "firebase": "catalog:",
     "immer": "catalog:",
-    "jotai": "catalog:",
+      "jotai": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "uuid": "catalog:",
     "wouter": "catalog:"
   }
 }
