--- a/app/package.json
+++ b/app/package.json
@@ -29,13 +29,15 @@
     "@testing-library/dom": "catalog:",
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "catalog:",
+    "@types/node": "^22.10.7",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@types/sinon": "catalog:",
     "@types/uuid": "catalog:",
+    "@vanilla-extract/css": "catalog:",
+    "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
-      "@vanilla-extract/css": "catalog:",
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-react": "catalog:",
@@ -44,7 +46,6 @@
     "sinon": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-      "@vanilla-extract/vite-plugin": "catalog:",
     "vitest": "catalog:"
   },
   "dependencies": {
@@ -59,7 +60,7 @@
     "crypto-js": "catalog:",
     "firebase": "catalog:",
     "immer": "catalog:",
-      "jotai": "catalog:",
+    "jotai": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "wouter": "catalog:"
